--- a/CSS/home.css
+++ b/CSS/home.css
@@ -127,6 +127,11 @@ li a:hover, .dropdown:hover .dropdownbtn {
     height: auto;
 }
 
+.hero{
+    box-shadow: 0 4px 2px -2px #dcdcdc;
+    box-sizing: border-box;
+}
+
 .in_site_links{
     font-family: Open Sans;
     font-style: normal;
@@ -141,6 +146,7 @@ li a:hover, .dropdown:hover .dropdownbtn {
 
 .link1{
     padding-top: 30px;
+    padding-bottom: 40px;
     margin-right: 5%;
 }
 
@@ -157,8 +163,14 @@ li a:hover, .dropdown:hover .dropdownbtn {
     display: flex;
     flex-direction: column;
     margin-top: 7%;
-    margin-left: 9%;
-    margin-right: 9%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+    background-image: url(..Images/);
+}
+
+.divider{
+    box-shadow: 0 4px 2px -2px #dcdcdc;
+    box-sizing: border-box;
 }
 
 h2{
@@ -172,9 +184,591 @@ h2{
     padding-bottom: 1.5%;
 }
 
+.test{
+    display: flex;
+}
+
+.abc{
+    display: flex;
+    flex-direction: column;
+}
+
+.graph{
+    width: 50vw;
+    display: flex;
+    float: left;
+    box-sizing: border-box;
+    padding-left: 2vw;
+    text-align: right;
+    align-content: center;
+}
+#data{
+    width: 45vw;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.covid_graph{
+    width: 90%;
+    height: auto;
+}
+
+.bold{
+    font-weight: normal;
+    padding-left: 30px;
+}
+
 table{
     width: 100%;
 }
+
 #table_holder{
     width: 45vw;
 }
+
+.vaccine_progress{
+    width: 45vw;
+}
+
+.firstcol{
+    color: #185D8B;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+#progressbar{
+    width: 100%;
+    height: auto;
+}
+
+table {
+    border: none;
+    border-collapse:separate;
+    border-spacing:0 10px;
+}
+
+th {
+    text-align: left;
+    font-weight: normal;
+}
+
+td.firstcol{
+    border-radius: 10px 0 0 10px;
+    height: 40px;
+    padding-left: 30px;
+}
+
+.colored-rows {
+    background-color: #CCD8E3;
+}
+
+td.bold{
+    border-radius: 0 10px 10px 0;
+}
+
+.secondcol{
+    padding-left: 10px;
+}
+
+h5{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+/* How Can We Help You Section */
+.helpYou{
+    display: flex;
+    flex-direction: column;
+    padding-top: 7%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+    box-shadow: 0 4px 2px -2px #dcdcdc;
+    box-sizing: border-box;
+}
+
+.background{
+    background-image: url(../Images/Help\ Background.png);
+    width: 100vw;
+    height: auto;
+}
+
+.helpCards{
+    display: flex;
+}
+
+.card1{
+    height: auto;
+    width: 25%;
+    background-image: url(../Images/Card\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 20%;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.card2{
+    height: auto;
+    width: 25%;
+    background-image: url(../Images/Card\ 2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 20%;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.card3{
+    height: auto;
+    width: 25%;
+    background-image: url(../Images/Card\ 3.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 20%;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.card4{
+    height: auto;
+    width: 25%;
+    background-image: url(../Images/Card\ 4.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 20%;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+/* Ouick Links */
+
+/* .card{
+    display: inline-block;
+    background-color: #185D8B !important;
+    margin-right: 2vw;
+    text-align: center;
+    overflow: hidden;
+}
+.card-deck{
+    width: 90vw;
+    padding-left: 5vw;
+    justify-content: space-between;
+    align-content: space-between;
+    padding-top: 20px;
+}
+.card-deck-2{
+    padding-left: 10vw !important;
+}
+.card a{
+    color: #DEF0F1;
+    text-decoration: none;
+    font-weight: bold;
+}
+.card:hover{
+    box-shadow: 0 9px 0 0 white, 0 -9px 0 0 white, 12px 0 5px -4px lightgrey, -12px 0 5px -4px lightgrey;
+} */
+
+.quickLinks{
+    /* display: flex;
+    flex-direction: column; */
+    padding-top: 7%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+    /* box-shadow: 0 4px 2px -2px #dcdcdc;
+    box-sizing: border-box; */
+}
+
+.quickLinks h2{
+    /* padding-top: 3%; */
+    padding-bottom: 2%;
+}
+
+.quickLinksContainer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.QL{
+    display: flex;
+    flex-direction: column;
+    background: #185D8B;
+    border-radius: 7.5px;
+    text-align: center;
+    /* align-items: center; */
+    /* width: 50%; */
+}
+
+/* .Q{
+    background: #185D8B;
+    border-radius: 7.5px;
+    margin-bottom: 4%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 2vw;
+    cursor: pointer;
+}
+
+.Q:hover{
+    color: white;
+    text-decoration: underline;
+} */
+
+.QL h3{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 40px;
+    color: #FFFFFF;
+}
+
+.QL p{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+    color: #F2EEEE;
+    /* padding-left: 2vw;
+    padding-right: 2vw; */
+}
+
+.subCard{
+    border: 2px solid #DEF0F1;
+    border-radius: 7.5px;
+    margin-bottom: 5%;
+}
+
+
+/* Breifing Section*/
+
+.briefing{
+    display: flex;
+    flex-direction: column;
+    padding-top: 7%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+}
+
+.briefingContainer{
+    display: flex;
+    justify-content: space-between;
+    /* margin-bottom: 2%; */
+}
+
+.cityDoc {
+    width: 50%;
+}
+
+.cityDoc img{
+    width: 95%;
+    cursor: pointer;
+}
+
+.highlights{
+    width:50%;
+}
+
+.info{
+    background: #CCD8E3;
+    opacity: 0.85;
+}
+
+.info p{
+    padding-left: 2vw;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+    color: #000000;
+    padding-top: 2.75%;
+    padding-bottom: 2.75%;
+}
+.phaseInfo{
+    background: #185D8B;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.phaseInfo h3{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 40px;
+    color: #FFFFFF;
+    padding-top: 2.25%;
+    padding-bottom: 2.25%;
+    text-align: center;
+}
+
+.white{
+    color: white;
+    opacity: 50%;
+}
+
+
+
+/* Stop the Spread Section  */
+.stopTheSpread{
+    padding-top: 7%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+    margin-bottom: 7%;
+}
+
+.stop img{
+    display: block;
+    margin-top: 2.5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+/* Mobile App Section */
+
+.mobileAlert{
+    margin-top: 4%;
+    margin-left: 5.25%;
+    margin-right: 6.25%;
+    background: #CCD8E3;
+    border-radius: 5px;
+}
+
+.mobileAlert h3{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 40px;
+    color: #000000;
+    padding-top: 4%;
+    padding-left: 10%;
+}
+
+.mobileAlert p{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+    color: #000000;
+    padding-top: 1%;
+    padding-left: 10%;
+}
+
+.mobileAlert{
+    display: flex;
+}
+
+.descButton{
+    width: 75%;
+}
+
+.mockUp{
+    width: 25%;
+}
+
+.alertB{
+    display: flex;
+    margin-top: 4%;
+}
+
+.alertButton{
+    width: 275px;
+    height: 56px;
+    background: #185D8B;
+    border-radius: 5px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+    border: none;
+    margin-left: 10%;
+    margin-right: 4%;
+    cursor: pointer;
+}
+
+.alertButton:hover{
+    background: #007FA0;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+}
+
+.link3{
+    padding-bottom: 0 !important;
+    padding-top: 1.3%;
+}
+
+
+/* Light Footer Section */
+
+.pageEnd{
+    margin-top: 10%;
+}
+
+.topBlue{
+    background-color: #185D8B;
+    color: #DEF0F1;
+    padding-top: 3%;
+    padding-bottom: 2.5%;
+    width: 100vw;
+    padding-left: 15%;
+    padding-right: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.same-line{
+    width: 30%;
+}
+
+.same-line h4{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 30px;
+    color: #FFFFFF;
+}
+
+.same-line p{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+    color: #DEF0F1;
+}
+
+#email-input{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #185D8B;
+}
+
+#subscribe-email {
+    background-color: white;
+    border: none;
+    color: #185D8B;
+    padding: 15px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    cursor: pointer;
+}
+
+.subBar{
+    display: flex;
+    margin-top: 4%;
+}
+
+.subButton{
+    width: 75px;
+    background: #FFFFFF;
+    color: #185D8B;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    border: none;
+    margin-left: 2.5%;
+    border-radius: 2.5px;
+}
+
+.subButton:hover{
+    color: #007FA0;
+    border: 2px solid #007FA0;
+}
+
+/* Dark Footer Section */
+
+.bottomDark{
+    background-color: #222527;
+    color: #DEF0F1;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    padding-top: 2.5%;
+    width: 100vw;
+    padding-left: 9%;
+    padding-right: 9%;
+    text-align: center;
+}
+
+#end-links{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+}
+
+#end-links a{
+    color: #DEF0F1;
+    opacity: 0.85;
+}
+
+#end-links a:hover{
+    color: white;
+    opacity: 100%;
+}
+
+#end-links span{
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+    /* padding-top: 10px; */
+}
+
+#socialMedia{
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+#socialMedia h4{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 40px;
+    color: #FFFFFF;
+}
+
+#lastItem span{
+    text-align: right;
+    align-content: end;
+    float: right;
+}
+
+#lastItem{
+    padding-bottom: 0.5%;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 30px;
+    color: #DEF0F1;
+    opacity: 0.8;
+}
+
+
