Polishing Home Page

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -147,7 +147,7 @@ li a:hover, .dropdown:hover .dropdownbtn {
 .link1{
     padding-top: 30px;
     padding-bottom: 40px;
-    margin-right: 5%;
+    margin-right: 4.5%;
 }
 
 .in_site_links a{
@@ -162,7 +162,7 @@ li a:hover, .dropdown:hover .dropdownbtn {
 .todayStat{
     display: flex;
     flex-direction: column;
-    margin-top: 7%;
+    margin-top: 4%;
     margin-left: 5.25%;
     margin-right: 6.25%;
     background-image: url(..Images/);
@@ -171,6 +171,7 @@ li a:hover, .dropdown:hover .dropdownbtn {
 .divider{
     box-shadow: 0 4px 2px -2px #dcdcdc;
     box-sizing: border-box;
+    width: 100vw;
 }
 
 h2{
@@ -184,102 +185,40 @@ h2{
     padding-bottom: 1.5%;
 }
 
-.test{
-    display: flex;
-}
-
-.abc{
-    display: flex;
-    flex-direction: column;
-}
-
-.graph{
-    width: 50vw;
-    display: flex;
-    float: left;
-    box-sizing: border-box;
+.todayStat h2{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 40px;
+    color: #000000;
     padding-left: 2vw;
-    text-align: right;
-    align-content: center;
+    padding-bottom: 1.5%;
 }
-#data{
-    width: 45vw;
-    display: inline-block;
-    box-sizing: border-box;
+
+.statContainer{
+    display: flex;
+    margin-left: 2%;
+    margin-right: 1%;
 }
 
 .covid_graph{
-    width: 90%;
-    height: auto;
-}
-
-.bold{
-    font-weight: normal;
-    padding-left: 30px;
-}
-
-table{
-    width: 100%;
-}
-
-#table_holder{
-    width: 45vw;
-}
-
-.vaccine_progress{
-    width: 45vw;
-}
-
-.firstcol{
-    color: #185D8B;
-    font-weight: bold;
-    font-size: 17px;
-}
-
-#progressbar{
     width: 100%;
     height: auto;
 }
 
-table {
-    border: none;
-    border-collapse:separate;
-    border-spacing:0 10px;
-}
-
-th {
-    text-align: left;
-    font-weight: normal;
-}
-
-td.firstcol{
-    border-radius: 10px 0 0 10px;
-    height: 40px;
-    padding-left: 30px;
-}
-
-.colored-rows {
-    background-color: #CCD8E3;
-}
-
-td.bold{
-    border-radius: 0 10px 10px 0;
-}
-
-.secondcol{
-    padding-left: 10px;
-}
-
-h5{
-    margin-top: 15px;
-    margin-bottom: 15px;
+.link2{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-right: -1%;
 }
 
 /* How Can We Help You Section */
 .helpYou{
     display: flex;
     flex-direction: column;
-    padding-top: 7%;
+    padding-top: 4%;
+    padding-bottom: 4%;
     margin-left: 5.25%;
     margin-right: 6.25%;
     box-shadow: 0 4px 2px -2px #dcdcdc;
@@ -290,10 +229,29 @@ h5{
     background-image: url(../Images/Help\ Background.png);
     width: 100vw;
     height: auto;
+    box-shadow: 0 4px 2px -2px #dcdcdc;
+    box-sizing: border-box;
+    width: 100vw;
 }
 
 .helpCards{
     display: flex;
+    margin-top: 1%;
+}
+
+.helpCards p{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 30px;
+    color: #DEF0F1;
+    margin-top: -21%;
+}
+
+.helpCards p:hover{
+    color: white;
+    text-decoration: underline;
 }
 
 .card1{
@@ -373,23 +331,21 @@ h5{
 } */
 
 .quickLinks{
-    /* display: flex;
-    flex-direction: column; */
-    padding-top: 7%;
+    padding-top: 4%;
+    padding-bottom: 4%;
     margin-left: 5.25%;
     margin-right: 6.25%;
-    /* box-shadow: 0 4px 2px -2px #dcdcdc;
-    box-sizing: border-box; */
 }
 
 .quickLinks h2{
-    /* padding-top: 3%; */
-    padding-bottom: 2%;
+    padding-bottom: 4%;
 }
 
 .quickLinksContainer{
     display: flex;
     justify-content: space-between;
+    margin-left: 2.2%;
+    margin-right: 1.2%;
 }
 
 .QL{
@@ -454,7 +410,7 @@ h5{
     flex-direction: column;
     padding-top: 7%;
     margin-left: 5.25%;
-    margin-right: 6.25%;
+    margin-right: 6.5%;
 }
 
 .briefingContainer{
@@ -465,6 +421,7 @@ h5{
 
 .cityDoc {
     width: 50%;
+    margin-left: 2.4%;
 }
 
 .cityDoc img{
@@ -492,6 +449,7 @@ h5{
     padding-top: 2.75%;
     padding-bottom: 2.75%;
 }
+
 .phaseInfo{
     background: #185D8B;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -515,7 +473,6 @@ h5{
 }
 
 
-
 /* Stop the Spread Section  */
 .stopTheSpread{
     padding-top: 7%;
@@ -536,8 +493,8 @@ h5{
 
 .mobileAlert{
     margin-top: 4%;
-    margin-left: 5.25%;
-    margin-right: 6.25%;
+    margin-left: 7.45%;
+    margin-right: 6.5%;
     background: #CCD8E3;
     border-radius: 5px;
 }
@@ -701,6 +658,7 @@ h5{
     color: #007FA0;
     border: 2px solid #007FA0;
 }
+
 
 /* Dark Footer Section */
 
